--- a/sample muddle app/css/sample_app.css
+++ b/sample muddle app/css/sample_app.css
@@ -1,169 +1,172 @@
+/********** global **********/
 html {
 	font-family: Arial, Helvetica, sans-serif;
 }
-
-body {
-	background-color: #b1b1b1;
+body { 
+	line-height: 1.25; 
+	background-color: #aeaeae;
 }
 
-/* wat */
-*, *:after, *:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
+/********** some standard styles **********/
+h1, h2, h3, h4, h5, h6 {
+	margin: 0;
+	font-weight: bold;
+	text-transform: capitalize;
+}
+h1 {font-size: 4rem;}
+h2 {font-size: 3.4rem;}
+h3 {font-size: 2.8rem;}
+h4 {font-size: 2.2rem;}
+h5 {font-size: 1.6rem;}
+h6 {font-size: 1rem;}
+
+button,.button {
+	color: #ecf0f1;
+	background-color: #05575B;
+	border: 1px solid #05575B;
+	border-radius: 4px;
+	text-transform: uppercase;
+	font-weight: bold;
+	box-sizing: border-box;
+	cursor: pointer;
+	padding: 0.1rem 0.25rem;
+	margin-right: 0.25rem;
+}
+button:hover,.button:hover {
+	border: 1px solid #48a3a6;
+}
+
+fieldset {
+	margin-bottom: 1rem;
+	padding: 0.25rem;
+	border-color: #b2b2b2;
+	display: table;
+}
+fieldset > .field {
+	display: table-row;
+}
+.field > * {
+	display: table-cell;
+}
+
+@media(min-width: 550px) {
+	fieldset.notable > .field {
+		display: initial;
+	}
+	fieldset.notable > .field > * {
+		display: initial;
+	}
+}
+
+fieldset.no-border {
+	border: none;
+	padding-left: 0;
+}
+fieldset legend {
+	font-weight: bold;
+	font-size: 120%;
+}
+
+/********** structure **********/
+.wrapper {
+	position: relative;
+	width: 100%;
+	margin: 0 auto;
+	padding: 2rem;
 	box-sizing: border-box;
 }
-
-button {
-	background-color: #4e4e4e;
-	color: #cacaca;
-	border: none;
-	padding: 0.1em 0.3em;
+.column {
+	box-sizing: border-box;
 }
-
-h2 {
-	margin: 1em 1em;
-}
-
-h3 {
-	margin: .25em 0;
-}
-
-h4 {
-	margin: .7em 0 .25em 0;
-}
-
-h5 {
-	margin: .5em 0 .2em 0;
-}
-
-.feature_cell {
-	display: table-cell;
-}
-
-.feature_table {
-	display: table;
-}
-
-.feature_row {
-	display: table-row;
-}
-
-.tag {
-	border: 2px solid red;
-}
-
-.wrapper {
-	width: 80%;
-	margin: 0 auto;
-	white-space: nowrap;
-	display: table;
-}
-
-.header {
-	height: 5em;
-	width: 100%;
-	background-color: #34495e;
-	font-size: 130%;
-	padding: 1em 1em;
-	display: table-row;
+.page-header {
+	padding: 1.25rem;
+	margin-bottom: 1rem;
+	background-color: #2c3e50;
 	color: #ecf0f1;
+	border-bottom: 5px solid #48a3a6;
+}
+.left {
+	margin-bottom: 1rem;
+	padding: 0.5rem;
+	background-color: #e6e6e6;
+}
+.right {
+	padding: 0.5rem;
+	background-color: #e6e6e6;
+}
+.head-bar {
+	color: #ecf0f1;
+	background-color: #2c3e50;
+	padding: 0.25rem;
+	margin: -0.5rem -0.5rem 0.5rem -0.5rem;
+	border-top: 3px solid #48a3a6;
 }
 
-.left_column {
-	background-color: #1abc9c;
-	display: table-cell;
-	width: 15em;
-	height: 30em;
+@media(min-width: 550px) {
+	.wrapper {
+		width: 95%;
+		padding: 0;
+	}
+	.top-bar {
+		width: 100%;
+		float: left;
+	}
+	.left {
+		width: 30%;
+		float: left;
+	}
+	.right {
+		width: 65%;
+		float: left;
+		margin-left: 5%;
+	}
 }
-
-.left_column > * {
-	margin: 0 1em;
+.wrapper:after {
+	content: "";
+	display: table;
+	clear: both;
 }
-
-.main_container {
-	background-color: #ecf0f1;
-	display: table-cell;
-	width: 100%;
-	height: 30em;
-	min-width: 20em;
-}
-
-.main_container > * {
-	margin: 0 1em;
-}
-
-.editor_box {
-	min-height: 16em;
-}
-
-.type_container {
-	margin-top: 1.75em;
-}
-
-.left_panel {
-	padding: .5em 0em 1em 1em;
-}
-
-.left_panel select {
-	margin-bottom: .5em;
-}
-
-.left_panel_doc {
-	font-weight: bold;
-	font-size: 80%;
-	width: 20em;
-	white-space: normal;
-	margin-bottom: .5em;
-}
-
-.master_edit {
-	margin: .75em 0em;
-}
-
-.left_panel > h3 {
-	margin-left: -1em;
-}
-
-.main_panel {
-	margin: 0 1em;
-}
-
-.button_column {
-	min-width: 5em;
-	width: 40%;
-}
-
-.button_column > button {
+.field {
 	display: block;
-	width: 100%;
-	margin: .5em 1em;
+}
+@media(min-width: 550px) {
+	.field {
+		display: inline-block;
+	}
 }
 
-.picker_container {
-	margin-top: 3em;
+/********** ui classes **********/
+.edit-header button {
+	float: right;
 }
-
-.ent_picker {
-	margin-top: .5em;
-	padding: 0;
-	cursor: default;
-	border: 1px solid gray;
+.edit-header h5, .edit-header button, .edit-header .button {
+	display: inline-block;
 }
-
-.ent_picker_item {
+.ent-picker {
+	margin: 0;
+	padding: 0 0 0 1rem;
+}
+.ent-picker li {
 	list-style-type: none;
-	background-color: #a7a7a7;
-	min-height: 1.25em;
+	min-height: 1.25rem;
+	cursor: pointer;
+	margin: 0;
 }
-
+.ent-picker li:hover {
+	color: #55728e;
+}
 .selected {
 	font-weight: bold;
+	border: 1px solid #4A708B;
+}
+.filepicker-label {
+	cursor: pointer;
 }
 
-label {
-	background-color: #4e4e4e;
-	color: #cacaca;
-	border: none;
-	padding: 0.2em 0.3em;
-	font-size: 80%;
+/********** util classes **********/
+.center {
+	text-align: center;
+}
+.spacer {
+	margin-bottom: 1.25rem;
 }
